--- a/haskellrank/haskellrank.cabal
+++ b/haskellrank/haskellrank.cabal
@@ -19,9 +19,20 @@ executable functional-programming-the-sums-of-powers
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
 
-executable bon-apetir
+executable bon-apetit
   hs-source-dirs:      src
   main-is:             BonAppetit.hs
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
+
+executable CoinChange
+  hs-source-dirs:      src
+  main-is:             CoinChange.hs
+  default-language:    Haskell2010
+  build-depends:       base >= 4.7 && < 5, vector
   
+executable list-gcd
+  hs-source-dirs:      src
+  main-is:             GCD.hs
+  default-language:    Haskell2010
+  build-depends:       base >= 4.7 && < 5
